the new version of Parcel is breaking builds. I am scaling back to v 2.3.2 until a fix appears

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./main.css" rel="stylesheet" />
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="root">split</div>
-    <script type="module" src="./Components/ClientApp.tsx"></script>
-  </body>
+    <script type="module" src="./components/ClientApp.tsx"></script>
+</body>
+
 </html>
